--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,18 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+
 android {
     compileSdkVersion 33
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.eundaeng.booksearch"
+        applicationId "com.verpjae.booksearch"
         minSdkVersion 19
         targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -41,6 +43,8 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
-    implementation 'com.google.android.gms:play-services-ads:21.0.0'
+    implementation 'com.google.android.gms:play-services-ads:22.0.0'
+    // inSdkVersion 20 이하 "AndroidX를 사용하는" 경우
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
